src/validation/tests/snapshots/rusty__validation__tests__assignment_validation_tests__implicit_action_downcasts_are_validated.snap
---
source: src/validation/tests/assignment_validation_tests.rs
expression: "&diagnostics"
---
warning[E067]: Implicit downcast from 'LINT' to 'DINT'.
   ┌─ <internal>:26:20
   │
26 │             fb.foo(var1, var2, var3);
   │                    ^^^^ Implicit downcast from 'LINT' to 'DINT'.

warning[E067]: Implicit downcast from 'LWORD' to 'DWORD'.
   ┌─ <internal>:26:26
   │
26 │             fb.foo(var1, var2, var3);
   │                          ^^^^ Implicit downcast from 'LWORD' to 'DWORD'.

error[E037]: Invalid assignment: cannot assign 'STRING' to 'BYTE'
   ┌─ <internal>:26:32
   │
26 │             fb.foo(var1, var2, var3);
   │                                ^^^^ Invalid assignment: cannot assign 'STRING' to 'BYTE'
